Online/Examples/c/Example/Example/asigntse-cbindgen.h


typedef int32_t LifecycleState;
typedef int32_t UpdateVariants;
typedef int32_t AuthenticationResult;
int32_t at_getLifecycleState(LifecycleState *state);
int32_t at_unsuspendSecureElement(void);
int32_t at_suspendSecureElement(void);
int32_t at_getCertificate(uint8_t **cert,
                          uint32_t *certLength);
int32_t at_getPublicKey(uint8_t **pubKey,
                        uint32_t *pubKeyLength);
int32_t at_getOpenTransactions(uint32_t **transactionNumbers,
                               uint32_t *transactionNumbersLength);
int32_t at_getTransactionCounter(uint32_t *counter);
int32_t at_getSignatureCounter(uint32_t *counter);
int32_t at_getSignatureAlgorithm(int8_t **signatureAlgorithm,
                                 uint32_t *signatureAlgorithmLength);
int32_t at_getLogTimeFormat(int8_t **logTimeFormat,
                            uint32_t *logTimeFormatLength);
int32_t at_getVersion(int8_t **version,
                      uint32_t *versionLength);
int32_t at_getSerialNumber(uint8_t **serial,
                           uint32_t *serialLength);
int32_t at_load(void);
int32_t at_unload(void);
void at_free(void **ptr);
void asigntse_free(void **ptr);
int32_t cfgSetConfigFile(const int8_t *path, uint32_t pathLength);
int32_t cfgSetHttpProxy(const int8_t *proxyUrl, uint32_t proxyUrlLength);
int32_t updateTime(int64_t newDateTime);
int32_t startTransaction(const int8_t *clientId,
                         uint32_t clientIdLength,
                         const uint8_t *processData,
                         uint32_t processDataLength,
                         const int8_t *processType,
                         uint32_t processTypeLength,
                         const uint8_t *additionalData,
                         uint32_t additionalDataLength,
                         uint32_t *transactionNumber,
                         int64_t *logTime,
                         uint8_t **serialNumber,
                         uint32_t *serialNumberLength,
                         uint32_t *signatureCounter,
                         uint8_t **signatureValue,
                         uint32_t *signatureValueLength);
int32_t updateTransaction(const int8_t *clientId,
                          uint32_t clientIdLength,
                          uint32_t transactionNumber,
                          const uint8_t *processData,
                          uint32_t processDataLength,
                          const int8_t *processType,
                          uint32_t processTypeLength,
                          int64_t *logTime,
                          uint8_t **signatureValue,
                          uint32_t *signatureValueLength,
                          uint32_t *signatureCounter);
int32_t finishTransaction(const int8_t *clientId,
                          uint32_t clientIdLength,
                          uint32_t transactionNumber,
                          const uint8_t *processData,
                          uint32_t processDataLength,
                          const int8_t *processType,
                          uint32_t processTypeLength,
                          const uint8_t *additionalData,
                          uint32_t additionalDataLength,
                          int64_t *logTime,
                          uint8_t **signatureValue,
                          uint32_t *signatureValueLength,
                          uint32_t *signatureCounter);
int32_t exportDataFilteredByTransactionNumberAndClientId(uint32_t transactionNumber,
                                                         const int8_t *clientId,
                                                         uint32_t clientIdLength,
                                                         uint8_t **exportedData,
                                                         uint32_t *exportedDataLength);
int32_t exportDataFilteredByTransactionNumber(uint32_t transactionNumber,
                                              uint8_t **exportedData,
                                              uint32_t *exportedDataLength);
int32_t exportDataFilteredByTransactionNumberInterval(uint32_t startTransactionNumber,
                                                      uint32_t endTransactionNumber,
                                                      uint32_t maximumNumberRecords,
                                                      uint8_t **exportedData,
                                                      uint32_t *exportedDataLength);
int32_t exportDataFilteredByTransactionNumberIntervalAndClientId(uint32_t startTransactionNumber,
                                                                 uint32_t endTransactionNumber,
                                                                 const int8_t *clientId,
                                                                 uint32_t clientIdLength,
                                                                 uint32_t maximumNumberRecords,
                                                                 uint8_t **exportedData,
                                                                 uint32_t *exportedDataLength);
int32_t exportDataFilteredByPeriodOfTime(int64_t startDate,
                                         int64_t endDate,
                                         uint32_t maximumNumberRecords,
                                         uint8_t **exportedData,
                                         uint32_t *exportedDataLength);
int32_t exportDataFilteredByPeriodOfTimeAndClientId(int64_t startDate,
                                                    int64_t endDate,
                                                    const int8_t *clientId,
                                                    uint32_t clientIdLength,
                                                    uint32_t maximumNumberRecords,
                                                    uint8_t **exportedData,
                                                    uint32_t *exportedDataLength);
int32_t exportData(uint32_t maximumNumberRecords,
                   uint8_t **exportedData,
                   uint32_t *exportedDataLength);
int32_t exportCertificates(uint8_t **certificates,
                           uint32_t *certificatesLength);
int32_t exportSerialNumbers(uint8_t **serialNumbers,
                            uint32_t *serialNumbersLength);
int32_t getMaxNumberOfClients(uint32_t *maxNumberClients);
int32_t getCurrentNumberOfClients(uint32_t *currentNumberClients);
int32_t getMaxNumberOfTransactions(uint32_t *maxNumberTransactions);
int32_t getCurrentNumberOfTransactions(uint32_t *currentNumberTransactions);
int32_t getSupportedTransactionUpdateVariants(UpdateVariants *supportedUpdateVariants);
int32_t authenticateUser(const int8_t *userId,
                         uint32_t userIdLength,
                         const uint8_t *pin,
                         uint32_t pinLength,
                         AuthenticationResult *authenticationResult,
                         int16_t *remainingRetries);
int32_t authenticateUserWithTse(const int8_t *userId,
                                uint32_t userIdLength,
                                const uint8_t *pin,
                                uint32_t pinLength,
                                AuthenticationResult *authenticationResult,
                                int16_t *remainingRetries,
                                const int8_t *tseId,
                                uint32_t tseIdLength);
int32_t logOut(const int8_t *userId,
               uint32_t userIdLength);